--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-<p>Dylan WebDev Portfolio</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dylan Comas</title>
+
+    <link rel="stylesheet" href="/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+<body class="light-mode">    
+    <div class="container">
+        <div class="theme-button">
+            <i class="fa-solid fa-circle-half-stroke"></i>
+        </div>
+        
+        <div class="typewriter">
+            <h1 class="title">&lt;/Dylan-Comas> </h1>
+        </div> 
+        <h2 class="subtitle">Welcome.</h2>
+        <p class="animated-paragraph" data-splitting>
+            My name is <b>Dylan Comas</b>, I'm 29 and based in Negrepelisse, Occitanie, FR. 
+            I've been learning <b>Web Development</b> for the past two months 
+            and here's my <b>journey</b> so far...</p>       
+    </div>
+
+    <div class="projects">
+        <ul>
+            <li><a href="https://dexyel.github.io/Easy-List-Manager/">&lt;/Easy-List-Manager></a></li>
+            <li><a href="#">&lt;/Project #2></a></li>
+            <li><a href="#">&lt;/Project #3></a></li>
+            <li><a href="#">&lt;/Project #4></a></li>
+            <li><a href="#">&lt;/Project #5></a></li>
+        </ul>
+    </div>
+    <script src="./app.js"></script>
+</body>
+</html>
