--- a/index.html
+++ b/index.html
@@ -32,15 +32,22 @@
         </label>
 
         <div class="wrapper">
-            <div class="wrapper-background">
-                <div class="menu-modal">
-                    <ul>
+            <div class="shadow">
+                <div class="wrapper-background">
+                    <div class="theme-buttons">
+                        <i id="blueButton" class="fa-solid fa-circle"></i>
+                        <i id="greenButton" class="fa-solid fa-circle"></i>
+                        <i id="orangeButton" class="fa-solid fa-circle"></i>
+                        <i id="purpleButton" class="fa-solid fa-circle"></i>
+                    </div>                    
+                    <ul class="menu-list">
                         <li><a href="#">GitHub</a></li>
                         <li><a href="#">About Me</a></li>
                         <li><a href="#">Contact</a></li>
-                    </ul>
+                    </ul>                    
                 </div>
-            </div>            
+            </div>
+                            
         </div>    
                     
     </header>
