--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dylan Comas</title>
+    <title>&lt;/Dylan-Comas></title>
 
     <link rel="stylesheet" href="./Styles/general.css">
     <link rel="stylesheet" href="./Styles/header.css">
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./Styles/main.css">
     <link rel="stylesheet" href="./Styles/keyframes.css">
     <link rel="stylesheet" href="./Styles/projects-list.css">
+    <link rel="stylesheet" href="./Styles/contact.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,20 +33,30 @@
         </label>
 
         <div class="wrapper">
-            <div class="shadow">
-                <div class="wrapper-background">
-                    <div class="theme-buttons">
-                        <i id="blueButton" class="fa-solid fa-circle"></i>
-                        <i id="greenButton" class="fa-solid fa-circle"></i>
-                        <i id="orangeButton" class="fa-solid fa-circle"></i>
-                        <i id="purpleButton" class="fa-solid fa-circle"></i>
-                    </div>
-                    <ul class="menu-list">
-                        <li><a href="#">GitHub</a></li>
-                        <li><a href="#">About Me</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
+            <div class="wrapper-background">
+                <div class="theme-buttons">
+                    <i id="blueButton" class="fa-solid fa-circle"></i>
+                    <i id="greenButton" class="fa-solid fa-circle"></i>
+                    <i id="orangeButton" class="fa-solid fa-circle"></i>
+                    <i id="purpleButton" class="fa-solid fa-circle"></i>
                 </div>
+                <div class="about-me">
+
+                </div>
+                <div class="contact">
+                    <h1>&lt;/Contact></h1>
+                    <form action="mailto:comas.dylan@gmail.com">
+                        <input name="name" type="text" class="contact-input" placeholder="Name">
+                        <input name="mail" type="text" class="contact-input" placeholder="Email">
+                        <textarea name="text"  class="contact-input" placeholder="Message..."></textarea>
+                        <input type="submit" value="&lt;/SEND>" action>
+                    </form>                    
+                </div>
+                <ul class="menu-list">
+                    <li><a href="https://github.com/dexyel" target="tab">GitHub</a></li>
+                    <li><a id="aboutMe">About Me</a></li>
+                    <li><a id="contact" href="#">Contact</a></li>
+                </ul>
             </div>
         </div>
     </header>
