fix page mode transition

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <img src="./wip.png"><img src="./wip.png">
             </li>
             <li>
-                <a href="#">Project-5</a>
+                <a href="#">Project-5</a> <!--projet basé autour du build pc ?-->
                 <img src="./wip.png"><img src="./wip.png">
             </li>
         </ul>
