update redirect contact

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <i id="orangeButton" class="fa-solid fa-circle"></i>
                     <i id="purpleButton" class="fa-solid fa-circle"></i>
                 </div>
+                
                 <div class="about-me">
 
                 </div>
@@ -50,7 +51,7 @@
                         <input name="mail" type="email" class="contact-input" placeholder="Email" required>
                         <textarea name="text"  class="contact-input" placeholder="Message..." required></textarea>
                         <input type="submit" value="&lt;/SEND>" action>
-                        <!-- <input type="hidden" name="_next" value="https://dexyel.github.io/message-sent.html"> -->
+                        <input type="hidden" name="_next" value="https://dexyel.github.io/message-sent.html">
                         <input type="hidden" name="_captcha" value="false">
                         <input type="hidden" name="_autoresponse" value="Thank you for getting in touch! I will get back to you shortly.">
                         <input type="hidden" name="_template" value="table">
