--- a/message-sent.html
+++ b/message-sent.html
@@ -8,12 +8,9 @@
 
     <link rel="stylesheet" href="./Styles/general.css">
     <link rel="stylesheet" href="./Styles/header.css">
-    <link rel="stylesheet" href="./Styles/menu-modal.css">
-    <link rel="stylesheet" href="./Styles/links-style.css">
     <link rel="stylesheet" href="./Styles/main.css">
+    <link rel="stylesheet" href="./Styles/message-sent.css">
     <link rel="stylesheet" href="./Styles/keyframes.css">
-    <link rel="stylesheet" href="./Styles/projects-list.css">
-    <link rel="stylesheet" href="./Styles/contact.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,15 +27,14 @@
 
     <div class="container">
         <div class="typewriter">
-            <h1 class="thank-you">&lt;/Thank-You></h1>
+            <h1 class="title">&lt;/Thank-You></h1>
         </div>
 
-        <h2 class="message">I will get back to you shortly!</h2>
-        <p class="animated-paragraph" data-splitting>
+        <h2 class="subtitle">I will get back to you shortly!</h2>
+        <p class="redirect" data-splitting>
             You should be automatically redirected to the main page in <span id="counter">5</span>...</p>
     </div>
-
-    <script src="./Scripts/app.js"></script>
+    
     <script src="./Scripts/counter.js"></script>
 </body>
 </html>
