--- a/index.html
+++ b/index.html
@@ -87,23 +87,27 @@
             </li>
             <li>
                 <a href="#">Project-2</a>
-                <img src="./Assets/wip.png"><img src="./wip.png">
+                <img src="./Assets/wip.png"><img>
             </li>
             <li>
                 <a href="#">Project-3</a>
-                <img src="./Assets/wip.png"><img src="./wip.png">
+                <img src="./Assets/wip.png"><img>
             </li>
             <li>
                 <a href="#">Project-4</a>
-                <img src="./Assets/wip.png"><img src="./wip.png">
+                <img src="./Assets/wip.png"><img>
             </li>
             <li>
                 <a href="#">Project-5</a> <!--projet basé autour du build pc ?-->
-                <img src="./Assets/wip.png"><img src="./wip.png">
+                <img src="./Assets/wip.png"><img>
             </li>
         </ul>
     </div>
 
-    <script src="./Scripts/app.js"></script>
+    <script src="./Scripts/main.js"></script>
+    <script src="./Scripts/theme.js"></script>
+    <script src="./Scripts/darkMode.js"></script>
+    <script src="./Scripts/menu.js"></script>
+    <script src="./Scripts/pageMode.js"></script>
 </body>
 </html>
