--- a/message-sent.html
+++ b/message-sent.html
@@ -35,6 +35,9 @@
             You should be automatically redirected to the main page in <span id="counter">7</span>...</p>
     </div>
 
+    <script src="./Scripts/main.js"></script>
+    <script src="./Scripts/theme.js"></script>
+    <script src="./Scripts/darkMode.js"></script>
     <script src="./Scripts/counter.js"></script>
 </body>
 </html>
