--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="&lt;/Dylan-Comas> Welcome to my portfolio.">
     <title>&lt;/Dylan-Comas></title>
 
     <link rel="stylesheet" href="./Styles/general.css">
@@ -24,11 +25,11 @@
 <body>
     <header>
         <div id="header-container">
-            <button id="mode-button">
+            <button id="mode-button" aria-label="Dark Mode">
                 <i class="fa-solid fa-circle-half-stroke"></i>
             </button>
             
-            <button id="menu-button">
+            <button id="menu-button" aria-label="Menu">
                 <i class="fa-solid fa-bars"></i>
             </button>
         </div>
@@ -53,23 +54,23 @@
                 <ul id="projects-list">
                     <li>
                         <a class="elm-link" href="https://dexyel.github.io/Easy-List-Manager/">Easy-List-Manager</a>
-                        <img src="./Assets/elm.png">
+                        <img src="./Assets/elm.png" alt="">
                     </li>
                     <li>
                         <a href="#">Project-2</a>
-                        <img src="./Assets/wip.png"><img>
+                        <img src="./Assets/wip.png" alt="">
                     </li>
                     <li>
                         <a href="#">Project-3</a>
-                        <img src="./Assets/wip.png"><img>
+                        <img src="./Assets/wip.png" alt="">
                     </li>
                     <li>
                         <a href="#">Project-4</a>
-                        <img src="./Assets/wip.png"><img>
+                        <img src="./Assets/wip.png" alt="">
                     </li>
                     <li>
                         <a href="#">Project-5</a> <!--projet basé autour du build pc ?-->
-                        <img src="./Assets/wip.png"><img>
+                        <img src="./Assets/wip.png" alt="">
                     </li>
                 </ul>
             </nav>
@@ -79,16 +80,16 @@
     <div id="side-container" class="close">
         <div id="side-background" class="close">
             <div id="theme-buttons">
-                <button id="blue-button">
+                <button id="blue-button" aria-label="Blue Theme">
                     <i class="fa-solid fa-circle"></i>
                 </button>
-                <button id="green-button">
+                <button id="green-button" aria-label="Green Theme">
                     <i class="fa-solid fa-circle"></i>
                 </button>
-                <button id="orange-button">
+                <button id="orange-button" aria-label="Orange Theme">
                     <i class="fa-solid fa-circle"></i>
                 </button>
-                <button id="purple-button">
+                <button id="purple-button" aria-label="Purple Theme">
                     <i class="fa-solid fa-circle"></i>
                 </button>
             </div>
