--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <img src="./Assets/elm.png" alt="">
                     </li>
                     <li>
-                        <a href="#">Project-2</a>
+                        <a href="https://dexyel.github.io/One-Day-One-Song">One-Day-One-Song</a>
                         <img src="./Assets/wip.png" alt="">
                     </li>
                     <li>
